--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     padding: 50px;
 }
 
+
 div {
     font-size: 30px;
 }
@@ -23,18 +24,18 @@ div {
     color: yellow;
 }
 
-#line {
-    color: white;
-    border: 2px solid white;
-    height: 30px;
-    left: 6px;
-    position: absolute;
+#current {
     animation: lineAnimation;
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
 
 @keyframes lineAnimation {
-    0% {opacity: 100%;}
-    50% {opacity: 0%;}
+    0% {border-left: 5px solid white;}
+    100% {border-left: none;}
+}
+
+
+.timer {
+    border: 5px solid white;
 }
